Extract optimization into qaoa_parameter_optimization.py

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -16,6 +16,7 @@
     "from configproblem.util.visualization import plot_counts_histogram, plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance_set\n",
     "import configproblem.qaoa.qaoa_mixer as mixer\n",
+    "import configproblem.qaoa.qaoa_parameter_optimization as parameter_optimization\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
@@ -69,6 +70,7 @@
     "\n",
     "# qaoa application config\n",
     "mixer_circuit = mixer.standard_mixer\n",
+    "parameter_optimization = parameter_optimization.get_optimizer('COBYLA', maxiter=1000, tol=1e-12)\n",
     "layers = 2 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "strategy = 'avg'\n",
@@ -216,7 +218,7 @@
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
-    "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, mixer_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
     "        probabilities_dict = {}\n",
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = probabilities[i]\n",
@@ -266,7 +268,7 @@
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_quso_combined_hamiltonian()\n",
     "\n",
-    "        probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, mixer_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
     "        probabilities_dict = {}\n",
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "            probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
