--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -217,10 +217,10 @@
     "               {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
     "               {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
     "strategies = ['min', 'avg', 'top']\n",
-    "plot_beta_gamma_cost_landscape(problem_circuit, mixer.standard_mixer, hamiltonians, strategies, 6, 0.2)\n",
-    "\n",
-    "# Plot cost landscape for different f and mu\n",
-    "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
+    "# plot_beta_gamma_cost_landscape(problem_circuit, mixer.standard_mixer, hamiltonians, strategies, 6, 0.2)\n",
+    "# \n",
+    "# # Plot cost landscape for different f and mu\n",
+    "# plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
    ]
   },
   {
@@ -232,21 +232,23 @@
     "from qaoa_application import apply_qaoa\n",
     "from qaoa_mincost_k_sat import problem_circuit\n",
     "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
+    "import configproblem.qaoa.qaoa_parameter_optimization as parameter_optimization\n",
     "\n",
     "hamiltonian = combined_hamiltonian\n",
     "mixer_circuit = mixer.standard_mixer\n",
-    "layers = 40 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "parameter_optimization = parameter_optimization.get_optimizer('CG')\n",
+    "layers = 10 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
-    "strategy = 'min'\n",
+    "strategy = 'avg'\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
     "\n",
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "counts, qc = apply_qaoa(problem_circuit, mixer_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
+    "counts, qc = apply_qaoa(problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
    ]
   },
   {
@@ -273,7 +275,7 @@
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
     "probabilities_dict = {}\n",
     "for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "    probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = round(probabilities[i], 4)\n",
@@ -322,7 +324,7 @@
     "print(\"Quadratized Hamiltonian:\")\n",
     "pprint(hamiltonian)\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(qubo_problem_circuit, mixer_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
+    "probabilities, _ = apply_qaoa_statevector(qubo_problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
     "probabilities_dict = {}\n",
     "for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "    probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
@@ -369,7 +371,7 @@
     "prioritized_list = []\n",
     "current_hamiltonian = combined_model.to_puso()\n",
     "for i in range(list_length):\n",
-    "    probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, current_hamiltonian, strategy=strategy, print_res=False)\n",
+    "    probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, parameter_optimization, current_hamiltonian, strategy=strategy, print_res=False)\n",
     "    probabilities_dict = {}\n",
     "    for j in range(0, 2 ** get_hamiltonian_dimension(current_hamiltonian)):\n",
     "        probabilities_dict[(np.binary_repr(j, width=get_hamiltonian_dimension(current_hamiltonian)))] = round(probabilities[j], 4)\n",
