--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -583,6 +583,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import configproblem.qaoa.qaoa_parameter_optimization as parameter_optimization\n",
+    "\n",
     "# QAOA Example Application Using Optimizer\n",
     "hamiltonian = combined_hamiltonian # min-cost SAT\n",
     "# hamiltonian = sat_model.to_quso()   # just SAT\n",
@@ -604,6 +606,7 @@
     "       0.04472136, 0.        , 0.        , 0.        ]\n",
     "\n",
     "mixer_circuit = mixer.standard_mixer\n",
+    "parameter_optimization = parameter_optimization.get_optimizer('COBYLA')\n",
     "layers = 5 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
@@ -615,7 +618,7 @@
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "counts, qc = apply_qaoa(problem_circuit, mixer_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
+    "counts, qc = apply_qaoa(problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
    ]
   },
   {
@@ -655,7 +658,7 @@
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=False)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=False)\n",
     "probabilities_dict = {}\n",
     "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
