Add warmstart mixer, extend grover mixer with warmstarts

--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -605,14 +605,14 @@
     "       0.26267851, 0.        , 0.232379  , 0.20248457, 0.20736441,\n",
     "       0.04472136, 0.        , 0.        , 0.        ]\n",
     "\n",
-    "mixer_circuit = mixer.standard_mixer\n",
+    "mixer_circuit = mixer.warmstart_mixer\n",
     "parameter_optimization = parameter_optimization.get_optimizer('COBYLA')\n",
     "layers = 5 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "strategy = 'avg'\n",
-    "use_warmstart = False\n",
+    "use_warmstart = True\n",
     "use_optimizer = True\n",
     "\n",
     "if not use_warmstart:\n",
