--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -236,7 +236,7 @@
     "\n",
     "hamiltonian = combined_hamiltonian\n",
     "mixer_circuit = mixer.standard_mixer\n",
-    "parameter_optimization = parameter_optimization.get_optimizer('CG')\n",
+    "parameter_optimization = parameter_optimization.get_optimizer('COBYLA')\n",
     "layers = 10 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
