Uncomment cost landscape plotting

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -217,10 +217,10 @@
     "               {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
     "               {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
     "strategies = ['min', 'avg', 'top']\n",
-    "# plot_beta_gamma_cost_landscape(problem_circuit, mixer.standard_mixer, hamiltonians, strategies, 6, 0.2)\n",
-    "# \n",
-    "# # Plot cost landscape for different f and mu\n",
-    "# plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
+    "plot_beta_gamma_cost_landscape(problem_circuit, mixer.standard_mixer, hamiltonians, strategies, 6, 0.2)\n",
+    "\n",
+    "# Plot cost landscape for different f and mu\n",
+    "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
    ]
   },
   {
