--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -15,6 +15,8 @@
     "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension, get_normalized_hamiltonian\n",
     "from configproblem.util.visualization import plot_counts_histogram, plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance_set\n",
+    "import configproblem.qaoa.qaoa_mixer as mixer\n",
+    "import configproblem.qaoa.qaoa_parameter_optimization as parameter_optimization\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
@@ -55,10 +57,10 @@
     "\n",
     "\n",
     "# run config\n",
-    "run_print_hamiltonians = False\n",
+    "run_print_hamiltonians = True\n",
     "run_cost_landscape = True\n",
-    "run_puso_qaoa = False\n",
-    "run_quso_qaoa = False\n",
+    "run_puso_qaoa = True\n",
+    "run_quso_qaoa = True\n",
     "\n",
     "save_results = False\n",
     "\n",
@@ -67,7 +69,9 @@
     "beta_gamma_step_size = 0.2\n",
     "\n",
     "# qaoa application config\n",
-    "layers = 40 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
+    "mixer_circuit = mixer.standard_mixer\n",
+    "parameter_optimization = parameter_optimization.get_optimizer('COBYLA', maxiter=1000, tol=1e-12)\n",
+    "layers = 2 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "strategy = 'avg'\n",
     "use_warmstart = False\n",
@@ -194,7 +198,7 @@
     "                            {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
     "                            {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
     "        strategies = ['min', 'avg', 'top']\n",
-    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size, file_path=file_path_beta_gamma)\n",
+    "        plot_beta_gamma_cost_landscape(quso_problem_circuit, mixer_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size, file_path=file_path_beta_gamma)\n",
     "        plot_f_mu_cost_landscape(get_normalized_hamiltonian(instance.get_puso_combined_hamiltonian()), instance.get_num_features(), file_path=file_path_f_mu)"
    ]
   },
@@ -214,7 +218,7 @@
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
-    "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
     "        probabilities_dict = {}\n",
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "            probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = probabilities[i]\n",
@@ -264,7 +268,7 @@
     "        print(f\"Instance {index}:\")\n",
     "        hamiltonian = instance.get_quso_combined_hamiltonian()\n",
     "\n",
-    "        probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
+    "        probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, mixer_circuit, parameter_optimization, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
     "        probabilities_dict = {}\n",
     "        for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "            probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
