--- a/configproblem/qaoa/qaoa_quantum_deflation.ipynb
+++ b/configproblem/qaoa/qaoa_quantum_deflation.ipynb
@@ -119,9 +119,11 @@
    "outputs": [],
    "source": [
     "from qaoa_mincost_sat import problem_circuit\n",
+    "import configproblem.qaoa.qaoa_mixer as mixer\n",
+    "import configproblem.qaoa.qaoa_parameter_optimization as parameter_optimization\n",
     "# deflation factor start value for vqd: 2600\n",
     "# deflation factor start value for pd: 800\n",
-    "prioritized_list = quantum_deflation.config_prioritization(problem_circuit, combined_hamiltonian, 6, 3, 2600, strategy='vqd', debug_output=True)\n",
+    "prioritized_list = quantum_deflation.config_prioritization(problem_circuit, mixer.standard_mixer, parameter_optimization.get_optimizer('COBYLA'), combined_hamiltonian, 6, 3, 2600, strategy='vqd', debug_output=True)\n",
     "\n",
     "for item in prioritized_list:\n",
     "    # Check config validity\n",
