Minor fixes in the descriptions of our methods

--- a/demonstrator.ipynb
+++ b/demonstrator.ipynb
@@ -446,7 +446,7 @@
     "f(\\vec x) = k(\\vec x) + \\alpha y(\\vec x)\n",
     "$$\n",
     "\n",
-    "We assume $\\alpha \\gg 0$, the exact value probably depends on the value of $k(\\vec x)$.\n",
+    "We assume $\\alpha \\gg 0$, the exact value depends on the value of $k(\\vec x)$.\n",
     "\n",
     "## Forming Hamiltonians\n",
     "We got our QUBO cost function defined. We now need to transform the Binary input space $x_i \\in \\{0,1\\}$ to the Ising Spin model of $z_i \\in \\{-1, 1\\}$. \n",
@@ -668,7 +668,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can visualize the cost landscape using $f$-$mu$ and $\\beta$-$\\gamma$ plots."
+    "We can visualize the cost landscape using $f$-$\\mu$ and $\\beta$-$\\gamma$ plots."
    ],
    "metadata": {
     "collapsed": false
@@ -796,8 +796,9 @@
     "\n",
     "For general problem Hamiltonians which might contain $k$-local terms with $k > 2$ we can either directly implement them using the `pubo_problem_circuit` function or convert them into a QUBO Hamiltonian using the `qubovert` library and implement the resulting quadratized Hamiltonian using the `qubo_problem_circuit` function.\n",
     "\n",
-    "The quadratized QUBO Hamiltonian has lower circuit depth, but used more qubits than the PUBO Hamiltonian.\n",
+    "The quadratized QUBO Hamiltonian has lower circuit depth, but uses more qubits than the PUBO Hamiltonian.\n",
     "\n",
+    "The following describes how a PUBO Hamiltonian can be transformed into a QUBO Hamiltonian using a simple quadratization method.\n",
     "For example, if we transform the clause $(x_i \\vee x_j \\vee x_k)$, we get the following penalty:\n",
     "\n",
     "$$1 - x_i - x_j - x_k + x_i x_j + x_i x_k + x_j x_k - x_i x_j x_k$$\n",
