Delete unrelated files

--- a/demonstrator.ipynb
+++ b/demonstrator.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "# Uniform Superposition Initialization\n",
-    "from configproblem.fragments.quantum_states import superposition_circuit, add_all_hadamards\n",
+    "from fragments.quantum_states import superposition_circuit, add_all_hadamards\n",
     "%psource superposition_circuit\n",
     "%psource add_all_hadamards"
    ]
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Mixer Hamiltonian\n",
-    "import configproblem.qaoa.qaoa_mixer as mixer\n",
+    "import qaoa.qaoa_mixer as mixer\n",
     "%psource mixer.standard_mixer"
    ]
   },
@@ -272,9 +272,10 @@
    "outputs": [],
    "source": [
     "# Cost Hamiltonian\n",
-    "from configproblem.qaoa.qaoa_mincost_sat import problem_circuit as qubo_problem_circuit\n",
-    "from configproblem.qaoa.qaoa_mincost_k_sat import problem_circuit as pubo_problem_circuit\n",
-    "%psource problem_circuit"
+    "from qaoa.qaoa_mincost_sat import problem_circuit as qubo_problem_circuit\n",
+    "from qaoa.qaoa_mincost_k_sat import problem_circuit as pubo_problem_circuit\n",
+    "%psource qubo_problem_circuit\n",
+    "%psource pubo_problem_circuit"
    ]
   },
   {
@@ -304,7 +305,7 @@
    "outputs": [],
    "source": [
     "# Example for a multi-controlled R_z gate\n",
-    "from configproblem.qaoa.qaoa_mincost_k_sat import k_rz_gate\n",
+    "from qaoa.qaoa_mincost_k_sat import k_rz_gate\n",
     "from qiskit import QuantumCircuit\n",
     "\n",
     "qubits = [0, 1, 2]\n",
@@ -330,7 +331,7 @@
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
-    "from configproblem.qaoa.qaoa_application import qaoa_circuit\n",
+    "from qaoa.qaoa_application import qaoa_circuit\n",
     "%psource qaoa_circuit"
    ]
   },
@@ -363,7 +364,7 @@
    "outputs": [],
    "source": [
     "# QAOA Quantum Procedure\n",
-    "from configproblem.qaoa.qaoa_application import quantum\n",
+    "from qaoa.qaoa_application import quantum\n",
     "%psource quantum"
    ]
   },
@@ -396,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from configproblem.qaoa.qaoa_parameter_optimization import get_optimizer\n",
+    "from qaoa.qaoa_parameter_optimization import get_optimizer\n",
     "%psource get_optimizer"
    ]
   },
@@ -517,7 +518,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.util.hamiltonian_math import solve_bruteforce\n",
+    "from util.hamiltonian_math import solve_bruteforce\n",
     "%psource solve_bruteforce"
    ],
    "metadata": {
@@ -604,7 +605,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.util.hamiltonian_math import compute_config_energy\n",
+    "from util.hamiltonian_math import compute_config_energy\n",
     "%psource compute_config_energy"
    ],
    "metadata": {
@@ -628,7 +629,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.util.hamiltonian_math import compute_hamiltonian_energy, hamiltonian_strategy_average, hamiltonian_strategy_top, hamiltonian_strategy_min\n",
+    "from util.hamiltonian_math import compute_hamiltonian_energy, hamiltonian_strategy_average, hamiltonian_strategy_top, hamiltonian_strategy_min\n",
     "%psource compute_hamiltonian_energy\n",
     "%psource hamiltonian_strategy_average\n",
     "%psource hamiltonian_strategy_top\n",
@@ -656,7 +657,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.qaoa.qaoa_application import get_expectation\n",
+    "from qaoa.qaoa_application import get_expectation\n",
     "%psource get_expectation"
    ],
    "metadata": {
@@ -679,7 +680,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
+    "from util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "# Plot cost landscape for different values of beta and gamma\n",
     "hamiltonians = [{'hamiltonian': sat_hamiltonian, 'name': 'SAT'},\n",
     "                {'hamiltonian': cost_model.to_quso(), 'name': 'COST'},\n",
@@ -712,7 +713,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.qaoa.qaoa_application import apply_qaoa_statevector\n",
+    "from qaoa.qaoa_application import apply_qaoa_statevector\n",
     "%psource apply_qaoa_statevector"
    ],
    "metadata": {
@@ -725,8 +726,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import configproblem.qaoa.qaoa_parameter_optimization as parameter_optimization\n",
-    "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
+    "import qaoa.qaoa_parameter_optimization as parameter_optimization\n",
+    "from util.hamiltonian_math import get_hamiltonian_dimension\n",
     "import numpy as np\n",
     "\n",
     "# QAOA Example Application Using Optimizer\n",
@@ -776,7 +777,7 @@
    "outputs": [],
    "source": [
     "# Pretty Print the results of the previous Cell\n",
-    "from configproblem.util.visualization import plot_counts_histogram\n",
+    "from util.visualization import plot_counts_histogram\n",
     "\n",
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
@@ -826,7 +827,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from configproblem.util.model_transformation import convert_to_penalty\n",
+    "from util.model_transformation import convert_to_penalty\n",
     "\n",
     "sat_instance = [[(x1, True), (x2, True)],\n",
     "              [(x2, True), (x3, False), (x4, True)],\n",
@@ -889,7 +890,7 @@
    "source": [
     "# Applying QAOA to the quadratized QUBO Hamiltonian\n",
     "\n",
-    "from configproblem.qaoa.qaoa_mincost_k_sat import convert_ancilla_bit_results\n",
+    "from qaoa.qaoa_mincost_k_sat import convert_ancilla_bit_results\n",
     "\n",
     "qubo_hamiltonian = combined_model.to_quso()\n",
     "\n",
